--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <title>Hannah Gunn</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
     <body>
-        <h1>Hannah Gunn</h1>
-        <p>I am hosted with GitHub Pages</p>
+
+        <section class="hero is-fullheight">
+            <!--Header for the hero-->
+            <nav class="navBar">
+                <div class="hero-head">
+                    <ul class="navBar-content">
+                        <li class="navBar-item">
+                            LinkedIn
+                        </li>
+                        <li class="navBar-item">
+                            GitHub
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <!--Hero Content is here-->
+            <div class="hero-body">
+                <div class="container text-centered">
+                    <p class="title">
+                        Hannah Gunn
+                    </p>
+                    <p class="subtitle">
+                        Random Quote
+                    </p>
+                </div>
+            </div>
+        </section>
+        
     </body>
 </html>
