--- a/index.html
+++ b/index.html
@@ -2,39 +2,43 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="./css/bulma.css" />
         <link rel="stylesheet" type="text/css" href="./css/style.css">
         <title>Hannah Gunn</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
 
-        <section class="hero is-fullheight">
+        <section class="hero is-primary is-fullheight">
             <!--Header for the hero-->
-            <nav class="navBar">
-                <div class="hero-head">
-                    <ul class="navBar-content">
-                        <li class="navBar-item">
-                            LinkedIn
-                        </li>
-                        <li class="navBar-item">
-                            GitHub
-                        </li>
-                    </ul>
+            <div class="hero-head">
+                <div class="navbar">
+                    <div class="container">
+                        <div id="navbarMenuHeroB" class="navbar-menu">
+                            <div class="navbar-end">
+                                <a class="navbar-item" href="https://www.linkedin.com/in/hannah-m-gunn/">
+                                    LinkedIn
+                                </a>
+                                <a class="navbar-item" href="https://github.com/hgunn97">
+                                    GitHub
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </nav>
+            </div>
 
             <!--Hero Content is here-->
             <div class="hero-body">
-                <div class="container text-centered">
+                <div class="container has-text-centered">
                     <p class="title">
                         Hannah Gunn
                     </p>
-                    <p class="subtitle">
+                    <!-- <p class="subtitle">
                         Random Quote
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </section>
-        
     </body>
 </html>
