Change color and size
Background color and link size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-        <section class="hero is-primary is-fullheight">
+        <section class="hero is-info is-fullheight">
             <!--Header for the hero-->
             <div class="hero-head">
                 <div class="navbar">
