Actually fixed the size this time

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     <div class="container">
                         <div id="navbarMenuHeroB" class="navbar-menu">
                             <div class="navbar-end">
-                                <a class="navbar-item" href="https://www.linkedin.com/in/hannah-m-gunn/">
+                                <a class="navbar-item size" href="https://www.linkedin.com/in/hannah-m-gunn/">
                                     LinkedIn
                                 </a>
-                                <a class="navbar-item" href="https://github.com/hgunn97">
+                                <a class="navbar-item size" href="https://github.com/hgunn97">
                                     GitHub
                                 </a>
                             </div>
