Adding Burger Menu

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
         <section class="hero is-info is-fullheight">
             <!--Header for the hero-->
             <div class="hero-head">
-                <div class="navbar">
+                <header class="navbar">
                     <div class="container">
-                        <div id="navbarMenuHeroB" class="navbar-menu">
+                        <div class="navbar-brand">
+                            <span class="navbar-burger burger" data-target="navbarMenuHeroC">
+                                <span></span>
+                                <span></span>
+                            </span>
+                        </div>
+                        <div id="navbarMenuHeroC" class="navbar-menu">
                             <div class="navbar-end">
                                 <a class="navbar-item size" href="https://www.linkedin.com/in/hannah-m-gunn/">
                                     LinkedIn
@@ -25,7 +31,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </header>
             </div>
 
             <!--Hero Content is here-->
