--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="./css/bulma.css" />
         <link rel="stylesheet" type="text/css" href="./css/style.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script type="text/javascript" 
+        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="./main.js"></script>
         <title>Hannah Gunn</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
