Adding stars background animation

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-
-        <section class="hero is-info is-fullheight">
+        <section class="hero is-fullheight">
+                <div id="stars"></div>
+                <div id="stars2"></div>
+                <div id="stars3"></div>
             <!--Header for the hero-->
             <div class="hero-head">
                 <header class="navbar">
-                    <div class="container">
+                    <div class="container" id="container-nav">
                         <div class="navbar-brand">
                             <span class="navbar-burger burger" data-target="navbarMenuHeroC" onclick="toggleBurger()">
                                 <span></span>
@@ -23,12 +25,12 @@
                                 <span></span>
                             </span>
                         </div>
-                        <div id="navbarMenuHeroC" class="navbar-menu">
+                        <div id="navbarMenuHeroC" class="navbar-menu"  style="background: transparent;">
                             <div class="navbar-end">
-                                <a class="navbar-item" href="https://www.linkedin.com/in/hannah-m-gunn/">
+                                <a class="navbar-item size" href="https://www.linkedin.com/in/hannah-m-gunn/">
                                     LinkedIn
                                 </a>
-                                <a class="navbar-item" href="https://github.com/hgunn97">
+                                <a class="navbar-item size" href="https://github.com/hgunn97">
                                     GitHub
                                 </a>
                             </div>
@@ -43,9 +45,9 @@
                     <p class="title">
                         Hannah Gunn
                     </p>
-                    <!-- <p class="subtitle">
-                        Random Quote
-                    </p> -->
+                    <p class="subtitle">
+                        "No matter what people tell you, words and ideas can change the world" - Robin Williams
+                    </p>
                 </div>
             </div>
         </section>
