--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <div id="stars"></div>
                 <div id="stars2"></div>
                 <div id="stars3"></div>
+                <div id="shootingStars"></div>
             <!--Header for the hero-->
             <div class="hero-head">
                 <header class="navbar">
