Changed external link
Colour change so that it is more visable

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         </div>
                         <div id="navbarMenuHeroC" class="navbar-menu"  style="background: transparent;">
                             <div class="navbar-end">
-                                <a class="navbar-item size" href="https://www.linkedin.com/in/hannah-m-gunn/">
+                                <a class="navbar-item size linkTxt" href="https://www.linkedin.com/in/hannah-m-gunn/">
                                     LinkedIn
                                 </a>
-                                <a class="navbar-item size" href="https://github.com/hgunn97">
+                                <a class="navbar-item size linkTxt" href="https://github.com/hgunn97">
                                     GitHub
                                 </a>
                             </div>
