Fixing Github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p class="title">
                         Hannah Gunn
                     </p>
-                    <p class="subtitle" id="quotes">
+                    <p class="subtitle" id="quoteTxt">
                     </p>
                     <span class="icon" onClick="textRefesh()">
                         <i class="fas fa-redo refreshBtn"></i>
